@@ -1,2 +1,4 @@
+* Add pre validation on current step view
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
